--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Burugux/burugux.github.io#readme",
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "holderjs": "^2.9.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.1"
   }
